# server/swagger/swagger-output.json
@@ -103,6 +103,17 @@
           }
         }
       }
+    },
+    "/parkingLots": {
+      "get": {
+        "description": "",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
     }
   }
 }
